# triads

./: LICENSE  README.srt  setup.cfg  setup.py
src/triads/: __init__.py  server.py
src/triads/apps/: Chord_Finder.py
