[metadata]
name = triads
version = attr: triads.__version__
license = MIT
author = rooigety
author_email = flanker_sheen.Of@icloud.com
description = Generate triads to find
long_description = file: README.srt
long_description_content_type = text/x-rst

[options]
package_dir=
    =src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    triads = triads.server:run